force-app/main/default/objects/Opportunity_Counterparty_Contact__c/Opportunity_Counterparty_Contact__c.object-meta.xml
<CustomObject>
    <description>Custom object to track contacts from opportunity counterparties for a prospective engagement.</description>
    <label>Opportunity Counterparty Contact</label>
    <nameField>
        <displayFormat>OCC-{000000}</displayFormat>
        <label>Counterparty Contact #</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Opportunity Counterparty Contacts</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>