force-app/main/default/objects/Opportunity_Counterparty_Contact__c/fields/Counterparty__c.field-meta.xml
<CustomField>
    <fullName>Counterparty__c</fullName>
    <label>Counterparty</label>
    <referenceTo>Opportunity_Counterparty__c</referenceTo>
    <relationshipLabel>Opportunity Counterparty Contacts</relationshipLabel>
    <relationshipName>Opportunity_Counterparty_Contacts</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>