force-app/main/default/objects/Opportunity_Counterparty_Contact__c/fields/OCC_Unique__c.field-meta.xml
<CustomField>
    <fullName>OCC_Unique__c</fullName>
    <caseSensitive>true</caseSensitive>
    <label>OCC_Unique</label>
    <length>50</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>